optimize and code style